--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ a{
     height: 50vh;
     width: 30vw;
     border-radius:60%;
-    background-image: url("images/my.jpg");
+    background-image: url("../images/my.jpg");
     background-size:cover;
     margin-left: 2vw;
     margin-top: 8vh;
